[gd_scene load_steps=13 format=3 uid="uid://c7yl7c7lwc57x"]

[ext_resource type="Script" path="res://dialogs/dialog_player.gd" id="1_0vi2j"]
[ext_resource type="Texture2D" uid="uid://dkjhaqbnbdqnq" path="res://assets/sprites/Character_Dialogue_Mizuchi.png" id="2_b0r6d"]
[ext_resource type="Texture2D" uid="uid://cjnxwfpc0g3uv" path="res://assets/sprites/Character_Dialogue_Parsee2.png" id="3_x5300"]
[ext_resource type="Texture2D" uid="uid://djs6ud10qs3gy" path="res://assets/sprites/Character_Dialogue_Komachi.png" id="4_3gxx4"]
[ext_resource type="FontFile" uid="uid://bv2i4vi1q1ow2" path="res://assets/fonts/pc-9900-v2.ttf" id="5_7uhvb"]
[ext_resource type="AudioStream" uid="uid://dqnwll23egoiv" path="res://assets/audio/bgm/Stage_2_Intro.ogg" id="6_rj5en"]
[ext_resource type="AudioStream" uid="uid://co87m3irugkbr" path="res://assets/audio/sfx/Button_Select_Release.mp3" id="7_10ywd"]
[ext_resource type="AudioStream" uid="uid://brnjyqxc4h5be" path="res://assets/audio/sfx/Collect_Item.mp3" id="7_q27ub"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cst0w"]
atlas = ExtResource("2_b0r6d")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2vhl"]
atlas = ExtResource("3_x5300")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0s6tk"]
atlas = ExtResource("4_3gxx4")
region = Rect2(0, 0, 128, 128)

[sub_resource type="Theme" id="Theme_uj4m1"]
Label/fonts/font = ExtResource("5_7uhvb")

[node name="DialogPlayer" type="CanvasLayer"]
process_mode = 3
layer = 0
script = ExtResource("1_0vi2j")

[node name="MizuchiSprite" type="TextureRect" parent="."]
visible = false
offset_left = 24.0
offset_top = 384.0
offset_right = 280.0
offset_bottom = 640.0
texture = SubResource("AtlasTexture_cst0w")

[node name="ParseeSprite" type="TextureRect" parent="."]
visible = false
offset_left = 1000.0
offset_top = 384.0
offset_right = 1256.0
offset_bottom = 640.0
texture = SubResource("AtlasTexture_v2vhl")
flip_h = true

[node name="KomachiSprite" type="TextureRect" parent="."]
visible = false
offset_left = 1000.0
offset_top = 384.0
offset_right = 1256.0
offset_bottom = 640.0
texture = SubResource("AtlasTexture_0s6tk")
flip_h = true

[node name="Panel" type="Panel" parent="."]
offset_top = 640.0
offset_right = 1280.0
offset_bottom = 960.0

[node name="PanelContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -24.0
offset_bottom = 303.0
grow_horizontal = 2

[node name="CharacterName" type="Label" parent="Panel/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme = SubResource("Theme_uj4m1")
theme_override_font_sizes/font_size = 48
text = "Parsee?"

[node name="DialogSection" type="Label" parent="Panel/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 175)
layout_mode = 2
theme = SubResource("Theme_uj4m1")
theme_override_font_sizes/font_size = 28
text = "placeholder text, idk what else to write here."
autowrap_mode = 2

[node name="ProceedHint" type="Label" parent="Panel/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 40)
layout_mode = 2
theme = SubResource("Theme_uj4m1")
theme_override_font_sizes/font_size = 28
text = "[Press Enter to proceed]"
autowrap_mode = 2

[node name="TransitionBGM1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_rj5en")

[node name="TransitionBGM2" type="AudioStreamPlayer" parent="."]

[node name="TransitionSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_10ywd")

[node name="DialogSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_q27ub")
